tests/runnable/test_12_while.ul
// test 12 : Has a while loop
// Parser / Lexer Valid: Yes

void main()
{
    int a;
    int b;
    
    a = 3;
    b = 22;

    while(a + 5 < b)
    {
        print "test 12";
        a = a + 2 ;
    }

    return (b);
    return a;
}