tests/invalid/test_39_greater_than.ul
// test 39 : Uses > instead of <
// Parser / Lexer Valid: Yes

void main()
{
    int a;
    a = 3;

    if (a > 0)
    {
        a = 5;
    }

    print a;
}